--- a/backend/hotel-management-system/src/main/resources/application.properties
+++ b/backend/hotel-management-system/src/main/resources/application.properties
@@ -1,9 +1,25 @@
 spring.application.name=hotel-management-system
 
-spring.datasource.url=jdbc:h2:mem:hoteldb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+# Server Configuration
+# server.port=8080
+# server.address=0.0.0.0
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=monu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# JPA Config
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Entity scanning
+spring.jpa.properties.hibernate.archive.autodetection=class, hbm
