--- a/backend/hotel-management-system/src/main/resources/application.properties
+++ b/backend/hotel-management-system/src/main/resources/application.properties
@@ -4,10 +4,16 @@ spring.application.name=hotel-management-system
 # server.port=8080
 # server.address=0.0.0.0
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=monu
+# MySQL RDS Configuration
+spring.datasource.url=jdbc:mysql://hotel-management-db.cbqgsy8y2ap4.ap-south-1.rds.amazonaws.com:3306/hotel_management?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=monumartinez
+
+# Local MySQL Configuration (Commented out)
+# spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+# spring.datasource.username=root
+# spring.datasource.password=monu
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
