--- a/backend/hotel-management-system/src/main/resources/application.properties
+++ b/backend/hotel-management-system/src/main/resources/application.properties
@@ -14,18 +14,28 @@ spring.datasource.password=monumartinez
 # spring.datasource.username=root
 # spring.datasource.password=monu
 
+# Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# JPA Config
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework=INFO
+logging.level.com.example=DEBUG
 
 # Entity scanning
 spring.jpa.properties.hibernate.archive.autodetection=class, hbm
