--- a/backend/hotel-management-system/src/main/resources/application.yml
+++ b/backend/hotel-management-system/src/main/resources/application.yml
@@ -14,7 +14,8 @@ server:
 cors:
   allowed-origins: 
     - http://hotel-management-ui.s3-website.ap-south-1.amazonaws.com
-    - https://hotel-management-ui.s3-website.ap-south-1.amazonaws.com
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
-  allowed-headers: "*"
+  allowed-headers: "Origin, Content-Type, Accept, Authorization, X-Requested-With"
+  exposed-headers: "Authorization"
   allow-credentials: true
+  max-age: 3600
