--- a/backend/hotel-management-system/src/main/resources/application.properties
+++ b/backend/hotel-management-system/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hotel-management-system
 
 # Server Configuration
 server.port=8081
-# server.address=0.0.0.0
+server.address=0.0.0.0
 
 # MySQL RDS Configuration
 spring.datasource.url=jdbc:mysql://hotel-management-public.cbqgsy8y2ap4.ap-south-1.rds.amazonaws.com:3306/hotel_management_db?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
