--- a/backend/hotel-management-system/src/main/resources/application.properties
+++ b/backend/hotel-management-system/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Connection Pool Settings
 spring.datasource.hikari.maximum-pool-size=10
+
+# Server Configuration
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=2000000
